--- a/QuizMe/src/main/resources/application.properties
+++ b/QuizMe/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=QuizMe
+
+server.port=7188
+
+spring.datasource.url=jdbc:mysql://localhost:3306/quizme
+spring.datasource.username=quizme
+spring.datasource.password=quizme
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
